--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://use.typekit.net/xzf2bvz.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Khai Chan Wolt Calculator ^^</title>
   </head>
